Support build configurations

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ steps:
     command: 'restore'
     projects: '**/*.csproj'
 
-temlate: templates/build.yml
+template: templates/build.yml
   parameters:
     buildConfiguration: 'Debug'
 
